# spacegym-kspdg

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  SPDX.spdx  config.yaml  environment.yml  install_julia_deps.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
dockerfiles/: Dockerfile
evaluation/: evaluate.py
evaluation/configs/: example_eval_cfg.yaml
evaluation/results/: README.md
ksp_files/Missions/20220516_PursuitEvade/: persistent.loadmeta  persistent.mission
ksp_files/Missions/20220516_PursuitEvade/Ships/VAB/: 20220405_GrapplerDrone.loadmeta
ksp_files/Missions/lbg1_i1/: persistent.loadmeta  persistent.mission
ksp_files/Missions/lbg1_i1/Ships/VAB/: 20230126_SciSat.loadmeta
ksp_files/Missions/lbg1_i2/: persistent.loadmeta  persistent.mission
ksp_files/Missions/lbg1_i2/Ships/VAB/: 20220524_GrapplerDrone.loadmeta
ksp_files/Missions/pe1_i1/: persistent.mission
ksp_files/Missions/sb1_i1/: persistent.mission
ksp_files/Missions/sb1_i1/Ships/VAB/: 20220405_GrapplerDrone.craft
ksp_files/Missions/sb1_i3/: persistent.loadmeta
ksp_files/Missions/sb1_i5/: persistent.mission
ksp_files/saves/missions/20220516_PursuitEvade/: 20220516_PursuitEvade_init.loadmeta  20220516_PursuitEvade_init.sfs  persistent.loadmeta  persistent.sfs  startcreatevesselspawn.missionsfs
ksp_files/saves/missions/20220516_PursuitEvade/Ships/: Referee.craft
ksp_files/saves/missions/lbg1_i1/: lbg1_i1_init.sfs  persistent.loadmeta
ksp_files/saves/missions/lbg1_i1/Backup/: persistent (2023_01_31_09_57_45).sfs  persistent (2023_01_31_10_02_45).sfs
ksp_files/saves/missions/lbg1_i1/Ships/: Bodyguard.craft
ksp_files/saves/missions/lbg1_i2/: lbg1_i2_init.sfs  persistent.loadmeta
ksp_files/saves/missions/lbg1_i2/Backup/: persistent (2023_02_23_16_08_14).sfs  persistent (2023_02_23_16_13_14).sfs
ksp_files/saves/missions/lbg1_i2/Ships/: Guard.craft
ksp_files/saves/missions/pe1_i1/: pe1_i1_init.loadmeta  persistent.loadmeta  persistent.sfs
ksp_files/saves/missions/pe1_i2/: persistent.sfs
ksp_files/saves/missions/pe1_i3/: persistent.sfs
ksp_files/saves/missions/pe1_i4/: persistent.sfs
ksp_files/saves/missions/sb1_i1/: persistent.sfs
ksp_files/saves/missions/sb1_i1/Backup/: persistent (2022_09_28_14_51_17).sfs  persistent (2022_09_28_17_48_34).sfs  persistent (2022_09_28_18_26_21).sfs  persistent (2022_09_28_18_31_22).sfs
ksp_files/saves/missions/sb1_i2/: persistent.sfs  sb1_i2_init.loadmeta
ksp_files/saves/missions/sb1_i2/Backup/: persistent (2022_07_22_08_15_27).sfs
ksp_files/saves/missions/sb1_i3/: persistent.sfs  quicksave.sfs  sb1_i3_init.sfs
ksp_files/saves/missions/sb1_i3/Backup/: persistent (2023_08_08_12_42_39).sfs
ksp_files/saves/missions/sb1_i4/: persistent.loadmeta  persistent.sfs
ksp_files/saves/missions/sb1_i4/Backup/: persistent (2022_09_29_21_44_13).sfs  persistent (2022_09_29_21_49_15).sfs  persistent (2022_09_29_22_04_23).sfs
ksp_files/saves/missions/sb1_i5/: sb1_i5_init.loadmeta  sb1_i5_init.sfs  startcreatevesselspawn.missionsfs
ksp_files/saves/missions/sb1_i5/Backup/: persistent (2023_09_06_16_36_52).sfs  persistent (2023_09_06_16_56_52).sfs
linters/: flake8.ini  isort.ini
scripts/: basic_evade_v20220509001.py  benchmark.bash  build_docker.bash  coverage.bash  evaluate.py  example_agent_cfg.yaml  example_agent_runner.py  example_eval_cfg.yaml  example_hello_kspdg.py  example_private_src_env_runner.py  jupyter.bash  lint.bash  lmp_safehandler.sh  lmp_safehandler_macos.sh  newbie_pursuer.py  pf_lmp.conf  run.bash  sb_objective_plot.py  test.bash
src/: basic_evade_v20220509001.py  example_agent_runner.py  example_hello_kspdg.py  main.py  sb_objective_plot.py
src/env/: ksp_env.py
src/ksp_env/: ksp_env.py
src/kspdg/: __init__.py  base_envs.py  version.py
src/kspdg/agent_api/: README.md  __init__.py  base_agent.py  example_agent.py  ksp_interface.py  runner.py
src/kspdg/evaluation/: README.md  evaluate.py
src/kspdg/evaluation/configs/: example_eval_cfg.yaml
src/kspdg/ksp_files/Missions/pe1_i1/: persistent.loadmeta
src/kspdg/ksp_files/Missions/pe1_i2/: persistent.loadmeta  persistent.mission
src/kspdg/ksp_files/Missions/pe1_i3/: persistent.loadmeta  persistent.mission
src/kspdg/ksp_files/Missions/pe1_i4/: persistent.loadmeta  persistent.mission
src/kspdg/lbb1/: README.md  __init__.py
src/kspdg/lbg1/: README.md  lbg1_base.py  lbg1_lg0_i1.py  lg0.py  lg0_envs.py  lg1_envs.py  lg2_envs.py
src/kspdg/pe1/: README.md  __init__.py  base.py  e1.py  e1_envs.py  e2_envs.py  e3.py  e3_envs.py  e4.py  e4_envs.py  pe1_base.py  pe1_e1_i1.py  pe1_e1_i2.py  pe1_e1_i3.py  pe1_e1_i4.py  pe1_e2_i1.py  pe1_e2_i2.py  pe1_e2_i3.py  pe1_e2_i4.py  pe1_e3_i1.py  pe1_e3_i2.py  pe1_e3_i20220516_v0.py  pe1_e3_i3.py  pe1_e3_i4.py  pe1_e4_i1.py  pe1_e4_i2.py  pe1_e4_i3.py  pe1_e4_i4.py
src/kspdg/pe20220516/: __init__.py  evasion_v20220705.py  evasion_v20220714.py  pursuit_v20220516.py
src/kspdg/private_src/: README.md
src/kspdg/private_src/python3_10/: version_info.txt
src/kspdg/private_src/python3_12/: version_info.txt
src/kspdg/private_src/python3_13/: version_info.txt
src/kspdg/private_src/python3_9/: version_info.txt
src/kspdg/sb1/: README.md  __init__.py  e1_envs.py  sb1_base.py
src/kspdg/scripts/: README.md  install_julia_deps.py  install_ksp_files.py  run_tests.py
src/kspdg/tests/ksp_ingame_tests/: README.md  test_lbg1_i2.py  test_pe1_i3.py  test_sb1_i5.py
src/kspdg/tests/serverless_tests/: test_jl_dynamics.py  test_jl_solvers.py  test_serverless_base_agent.py  test_serverless_pe1_base.py  test_serverless_utils.py
src/kspdg/utils/: constants.py  loggers.py  plotters.py  private_src_utils.py  utils.py
tests/ksp_ingame_tests/: test_lbg1_i2.py  test_lbg1_lg0_i2.py  test_pe1_e1_i3.py  test_pe1_i3.py  test_pursuit_v20220516.py  test_sb1_e1_i5.py  test_sb1_i5.py  test_utils_20220629.py
tests/serverless_tests/: README.md  example_script.jl  test_jl_solvers.py  test_juliacall.py  test_serverless_pe1_base.py  test_serverless_utils.py
(+227 files in other folders)
